gitops/kustomize/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-quarkus-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: my-quarkus-app
          ports:
            - containerPort: 8081
