gitops/kustomize/overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-quarkus-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
